--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,26 +1,66 @@
-h1 {
+/* Main Formatting */
+* {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+h2 {
 	font-style: monospace;
-	font-family: Monaco, Courier;
+	font-family: Consolas, Monaco, Courier;
 	font-weight: normal;
 }
 
 body {
 	background-color: #fefefe;
 	color: #333;
-	font-family: Monaco, Courier;
+	font-family: Consolas, Monaco, Courier;
 	margin: 0;
 }
-header {
 
+.font-test > div  {
+	font-size: 3.5em;
+	color: #000;
 }
 
+.test-block > div {
+	display: inline-block;
+}
+.container {
+	margin: 0 auto;
+	width: 85%;
+	margin-top: 2.5em;
+}
 .detects {
-	border: solid 1px #fff;
-	background-color: #fafafa;
+	margin: 3.5em 0 3.5em 0;
 }
 
-.icon-test {
-	margin: 2em 0 2em 0;
-	border-top: solid 1px #f1f1f1;
-	border-bottom: solid 1px #f1f1f1;
+.javascript-supported {
+	display: none;
+}
+.svg-supported {
+	display: none;
+}
+.fontface-supported {
+	display: none;
+}
+
+.js .javascript-supported {
+	display: list-item;
+}
+.svg .svg-supported {
+	display: list-item;
+}
+.fontface .fontface-supported {
+	display: list-item;
+}
+
+
+a {
+	color: #78C221;
+}
+
+footer {
+	font-size: .7em;
+	margin-top: 2em;
 }
